# zed

./: Cargo.toml  continue  plan
assets/settings/: default.json
crates/agent_ui/src/: agent_diff.rs
crates/buffer_diff/src/: buffer_diff.rs
crates/editor/src/: editor.rs  element.rs
crates/feature_flags/src/: flags.rs
crates/git_ui/src/: file_diff_view.rs  project_diff.rs  text_diff_view.rs
crates/jj/: Cargo.toml
crates/jj/src/: lib.rs  tracker.rs  workspace.rs
crates/jj_support/: Cargo.toml
crates/jj_support/src/: lib.rs  tracker.rs
crates/jj_ui/: Cargo.toml
crates/jj_ui/src/: jj_panel.rs  lib.rs
crates/multi_buffer/src/: multi_buffer.rs
crates/project/: Cargo.toml
crates/project/src/: git_store.rs  jj_store.rs  lsp_store.rs  manifest_tree.rs  project.rs  project_settings.rs  vcs.rs  worktree_store.rs
crates/repl/src/: repl_editor.rs  repl_sessions_ui.rs  session.rs
crates/repl/src/kernels/: native_kernel.rs
crates/settings/: Cargo.toml
crates/settings/src/: vscode_import.rs
crates/settings/src/settings_content/: project.rs
crates/text/src/: text.rs
crates/worktree/: Cargo.toml
crates/worktree/src/: worktree.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
crates/zeta/src/: license_detection.rs
docs/: vcs_overview.md
docs/src/: jj.md
