[package]
name = "jj_ui"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true

[lints]
workspace = true

[features]
default = []
jj-ui = []

[dependencies]
anyhow.workspace = true
feature_flags.workspace = true
gpui.workspace = true
jj.workspace = true
project.workspace = true
time.workspace = true
ui.workspace = true
workspace.workspace = true
