[package]
name = "jj_ui"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
command_palette_hooks.workspace = true
feature_flags.workspace = true
gpui.workspace = true
editor.workspace = true
language.workspace = true
log.workspace = true
project = { workspace = true, features = ["jj-ui"] }
time.workspace = true
ui.workspace = true
workspace.workspace = true
jj.workspace = true
ui_input.workspace = true
